fixed z-index

--- a/styles/sass/partials/index/_aboutme.scss
+++ b/styles/sass/partials/index/_aboutme.scss
@@ -9,6 +9,7 @@ section.aboutMe {
         font-size: 2rem;
         position: relative;
         top: 50px;
+        z-index: 10;
     }
 }
 
